# Task1

./: CMakeLists.txt
Øving1/: CMakeLists.txt  Øving1.cpp  Øving1.h
