# CMakeList.txt : CMake project for Øving1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (CMakeTarget "Øving1.cpp" "Øving1.h")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")

# TODO: Add tests and install targets if needed.
